--- a/LAB-1/index.html
+++ b/LAB-1/index.html
@@ -5,13 +5,43 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    
+    <link rel="stylesheet" href="style.css">
+    
 </head>
-<h1>
-    <h1>Hello Html !!!</h1>
-    <h2>Miss.malairat arpornram</h2>
-    <P>ID : 640112418040 <br> Nickname : Fah </P>
-    <P><strong>Program</strong> : <i>Information</i>
-        Tecnology </P>
-        <p>Buriram Rajabhat <span class="red">University</span></p>
+<body>
+    <h1 style="color:red; ">Hello Html !!!</h1>
+    <h2 class="blue">Miss.Nobphanusiri yiram</h2>
+    <p class="blue">
+        ID : 640112418038 <br> 
+        Nickname : Palm 
+        </p>
+    <p><strong>Prokram</strong> : <i>Information</i>
+        Tecnology</p>
+        <p>Buriram Rajabhat </p><span
+        class="red">University</span></body>
+
+        <!-- day2-->>
+    <form action="#" method="get">
+        <lable>Username</lable>
+        <input type="text" id="" name="user" required />
+        <br />
+        <lable>password</lable>
+        <input type="password" id="" name="pass" />
+        <hr>
+        <input type="checkbok" name="cn1" checked />
+        <input type="checkbok" name="cn2" />
+        <input type="hidden"  />
+        <br>
+        <input type="radio" name="rad1" />
+        <input type="radio" name="rad1" />
+        <br>
+        <input type="email" placeholder="email" /><br/>
+        <input type="date"/>
+
+        <button type="submit">SAVE</button>
+        <button type="reset">   CANCLE</button>
+        </form>
 </body>
 </html>
+
